fixed issue with missaligned text

--- a/src/Components/HelloMsg/HelloMsg.scss
+++ b/src/Components/HelloMsg/HelloMsg.scss
@@ -1,6 +1,7 @@
 .hello-msg {
     display: flex;
     justify-content: center;
+    text-align: center;
 
     font-family: "Inconsolata", monospace;
     font-size: 60px;
